version 0.60.2
10/04/2018
	- implemented OAuth2 client registration (margaretha)
	- implemented OAuth2 client authentication (margaretha)
	- changed virtual corpus search to retrieval (margaretha)
	- implemented public client deregistration task (margaretha)
	- added client registration and deregistration tests (margaretha)
	- implemented confidential client deregistration task (margaretha)
	
version 0.60.1
28/03/2018
	- added admin-related SQL codes (margaretha)
	- updated AdminDao (margaretha)
	- added optional username query parameter to group list controller (margaretha) 
	- fixed non hierarchical URI of kustvakt conf files (margaretha)
	- added delete group member triggers (margaretha)
	- added list user-group by username and status for system admin (margaretha)
	- added user-group status in user-group DTO (margaretha)
	- added check for hidden groups in user-group tests (margaretha)
	- added database trigger test on deleting members when deleting group (margaretha)
	- renamed VC type PREDEFINED to SYSTEM (margaretha)
	- added VC list controller for system admin (margaretha)
	- added VC controller tests with for system admin (margaretha) 
	- added hidden access removal when deleting published VC (margaretha)
	- added check for hidden groups in VC controller tests (margaretha)
	- added search user-group controller (margaretha)
	- removed createdBy from VirtualCorpusJson (margaretha)
	- moved member role setting from the invitation phase to the after-subscription phase (margaretha)
	- added member role removal after deleting members (margaretha)
	- added add and delete member role controllers (margaretha)
	
version 0.60
14/03/2018
	- set up mail settings using localhost port 25 (margaretha)
	- added mail template in kustvakt configuration (margaretha)
	- added mail settings to readme (margaretha)
	- disabled email notification for auto group (margaretha)
	- added metadata retrieval (diewald)