@@ -6,6 +6,7 @@ version 0.60.2
 	- implemented public client deregistration task (margaretha)
 	- added client registration and deregistration tests (margaretha)
 	- implemented confidential client deregistration task (margaretha)
+	- fixed storing client secret (margaretha)
 	
 version 0.60.1
 28/03/2018
